Revision history for Perl extension WWW::Mechanize

NEXT

1.10    Tue Jan 31 11:30pm-ish
        [FIXES]
        * Fixed bug where images inside of links would not be found.

        * Fixed test failures because of Google changes.  Thanks to
          Offer Kaye and others who sent in patches.

        [DOCUMENTATION]
        * More samples in the FAQ.  Thanks to Joshua Gatcomb.

        [INTERNALS]

        * Added explanation of running live tests against Google in Makefile.PL.


1.08    Fri Dec 24 01:01:06 CST 2004
        [ENHANCEMENTS]
        * Added find_image() and find_all_images().

1.06    Wed Dec  8 14:58:39 CST 2004
        [INTERNALS]
        * Now uses the base pragma instead of setting @ISA.

1.05_04 Fri Nov  5 23:35:38 CST 2004
        [ENHANCEMENTS]
        * Added WWW::Mechanize::Image object for representing images.
        * Improved the regex on the URL for META tags.
        * Added --images flag to mech-dump.

        [FIXES]
        * When parsing urls out of meta refresh tags, "url" may now be
          uppercase (RT#8230)

        * Behavior of back() fixed in a number of cases (RT#8109  reported by
          Josh Purinton, patched by Dominique Quatravaux)

        [INTERNALS]
        * Mark figured out to how to prevent his text editor from putting tabs
          into the code. Andy's blood pressure dropped slightly.

1.05_03 Sun Oct 31 20:54:33 CST 2004

        [ENHANCEMENTS]
        * click_button() has a new input option for HTML::Form::SubmitInput
          objects (DOMQ)

        * content() has new options to return the page formatted
          as text, with a <base href> added. (RT#8087, patch by
          Dominique Quatravaux)

        * update_html() method has been added, which can be used
          to modify the HTML that Mech parses. It should be sub-classed
          instead of _parse_html(), which has been deprecated.
          (RT#8087, patch by Dominique Quatravaux)
